--- a/README
+++ b/README
@@ -56,6 +56,9 @@ Jaroslav Kˇrivánek and Pascal Gautron, 2009
 [13] A Survey of Photon Mapping for Realistic Image Synthesis
 Justin L. Shumaker, 2005
 
+[14] The Stanford Models
+Stanford University Computer Graphics Laboratory
+
 License
 =======
 
